--- a/YoloV8_2 (2).ipynb
+++ b/YoloV8_2 (2).ipynb
@@ -16,6 +16,7 @@
     },
     "accelerator": "GPU",
     "widgets": {
+      "state": {},
       "application/vnd.jupyter.widget-state+json": {
         "6b7593f05eec41c98d5e9772bf2c3ac2": {
           "model_module": "@jupyter-widgets/controls",
